--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div class="container px-8 md:px-20 mx-auto absolute top-40">
         <div class="tittle">
           <h2 class="text-xl md:text-2xl font-bold text-slate-500">MOTTO</h2>
-          <h1 class="text-3xl md:text-5xl font-bold text-white mt-4 md:mt-5">
+          <h1 class="text-3xl md:text-4xl font-bold text-white mt-4 md:mt-5">
             SMA IT HSI IDN,<br />
             Jagoan IT, Pinter Ngaji
           </h1>
@@ -133,29 +133,92 @@
       </div>
     </section>
 
-    <section class="sambutan mb-24">
-      <div class="px-8 mx-auto flex flex-col justify-center items-center">
-        <div class="w-[300px] h-[200px] mt-16 relative">
+    <section class="sambutan mb-16">
+      <div
+        class="px-8 lg:px-40 mx-auto flex flex-col md:flex-row justify-center md:justify-start md:items-start md:gap-10 items-center"
+      >
+        <div
+          class="w-[300px] h-[200px] md:w-[456px] md:h-[342px] mt-16 relative"
+        >
           <img
             src="images/DSC_0048.JPG"
             class="object-contain rounded shadow-xl"
             alt=""
           />
         </div>
-        <div class="tittle px-6">
+        <div class="tittle px-6 md:px-0 items-center md:mt-14">
           <h2 class="font-bold text-2xl mt-7">
-            Sambutan Kepala Sekolah SMA IT HSI IDN
+            Sambutan Kepala Sekolah <br />
+            SMA IT HSI IDN
           </h2>
-          <p class="text-sm font-normal text-black text-opacity-50 mt-2">
+          <p
+            class="text-sm font-normal text-black text-opacity-50 mt-2 md:mt-6"
+          >
             Puji dan syukur mari kita panjatkan kehadirat Allah SWT. Yang
-            senantiasa dengan sifat kasih dan sayangnya banyak memberikan nikmat
-            ...
+            senantiasa dengan <br />
+            sifat kasih dan sayangnya banyak memberikan nikmat ...
           </p>
           <button
-            class="bg-sky-500 text-sm md:text-base font-bold text-white rounded-lg px-8 py-2 mt-5"
+            class="bg-sky-500 text-sm md:text-base font-bold text-white rounded-lg px-8 py-2 mt-5 md:mt-10"
           >
             Tonton Disini
           </button>
+        </div>
+      </div>
+    </section>
+
+    <section class="profil bg-[#F9FBFD] py-16">
+      <div class="container mx-auto px-10 md:flex">
+        <div
+          class="title md:w-2/5 md:border-r md:flex md:flex-col md:justify-center"
+        >
+          <h2 class="text-2xl md:text-3xl font-bold text-black">
+            Profil Sekolah
+          </h2>
+          <p
+            class="text-sm md:text-base font-normal text-black text-opacity-50 mt-4 md:mt-6 md:pr-5"
+          >
+            Berikut ini adalah profil sekolah kami secara <br />
+            keseluruhan dari mulai bagian depan hingga seluruh fasilitas yang
+            terdapat disekolah kami kami akan ...
+          </p>
+          <button
+            class="bg-sky-500 text-sm md:text-base font-bold text-white rounded-lg px-8 py-2 mt-5 md:mt-10 md:w-[184px]"
+          >
+            Lebih Lanjut
+          </button>
+        </div>
+        <div
+          class="fasilitas mt-10 flex flex-col gap-5 justify-center items-center md:flex-row md:flex-wrap md:w-1/2 md:mr-5 md:mx-auto"
+        >
+          <div class="card w-[250px] h-[250px] bg-white rounded shadow-xl">
+            <img src="images/Group 31.png" class="mt-5" alt="" />
+            <h2 class="font-bold text-xl text-black px-7">Fasilitas</h2>
+            <p class="text-sm font-normal text-black text-opacity-50 px-7 mt-4">
+              Lorem ipsum dolor sit amet adipcing aqua lorem ipsum.
+            </p>
+          </div>
+          <div class="card w-[250px] h-[250px] bg-white rounded shadow-xl">
+            <img src="images/Group 33.png" class="mt-5" alt="" />
+            <h2 class="font-bold text-xl text-black px-7">Lokasi</h2>
+            <p class="text-sm font-normal text-black text-opacity-50 px-7 mt-4">
+              Lorem ipsum dolor sit amet adipcing aqua lorem ipsum.
+            </p>
+          </div>
+          <div class="card w-[250px] h-[250px] bg-white rounded shadow-xl">
+            <img src="images/Group 34.png" class="mt-5" alt="" />
+            <h2 class="font-bold text-xl text-black px-7">Sejarah</h2>
+            <p class="text-sm font-normal text-black text-opacity-50 px-7 mt-4">
+              Lorem ipsum dolor sit amet adipcing aqua lorem ipsum.
+            </p>
+          </div>
+          <div class="card w-[250px] h-[250px] bg-white rounded shadow-xl">
+            <img src="images/Group 36.png" class="mt-5" alt="" />
+            <h2 class="font-bold text-xl text-black px-7">Prestasi</h2>
+            <p class="text-sm font-normal text-black text-opacity-50 px-7 mt-4">
+              Lorem ipsum dolor sit amet adipcing aqua lorem ipsum.
+            </p>
+          </div>
         </div>
       </div>
     </section>
