--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>SMA IT HSI IDN</title>
+    <link href="images/logo-idn.png" rel="icon" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -121,7 +122,7 @@
         <div class="tittle">
           <h2 class="text-xl md:text-2xl font-bold text-slate-500">MOTTO</h2>
           <h1 class="text-3xl md:text-4xl font-bold text-white mt-4 md:mt-5">
-            SMA IT HSI IDN,<br />
+            SMA IT <span class="text-sky-600">HSI IDN</span>,<br />
             Jagoan IT, Pinter Ngaji
           </h1>
           <button
@@ -167,7 +168,7 @@
       </div>
     </section>
 
-    <section class="profil bg-[#F9FBFD] py-16">
+    <section class="profil bg-[#F9FBFD] py-8">
       <div class="container mx-auto px-10 md:flex">
         <div
           class="title md:w-2/5 md:border-r md:flex md:flex-col md:justify-center"
@@ -218,6 +219,135 @@
             <p class="text-sm font-normal text-black text-opacity-50 px-7 mt-4">
               Lorem ipsum dolor sit amet adipcing aqua lorem ipsum.
             </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="berita my-12">
+      <div class="container px-10 mx-auto">
+        <h2 class="font-bold text-2xl text-black">Berita dan Agenda</h2>
+        <div class="md:flex md:gap-5 md:flex-wrap md:justify-center mt-5">
+          <div class="card bg-white shadow-xl md:w-80 lg:w-96 lg:h-[550px]">
+            <img src="images/image 21.png" class="mt-5 w-full rounded" alt="" />
+            <h2 class="font-bold text-xl text-black px-7 mt-6">Info PPDB</h2>
+            <p class="text-sm font-normal text-black text-opacity-50 px-7 mt-4">
+              SK Penetapan Hasil Seleksi PPDB SMA IT HSI IDN
+            </p>
+            <p
+              class="text-sm font-normal text-black text-opacity-50 px-7 mt-8 pb-6"
+            >
+              <a href="" class="underline text-sky-500">Baca Selengkapnya</a>
+            </p>
+          </div>
+          <div class="card bg-white shadow-xl md:w-80 lg:w-96 lg:h-[550px]">
+            <img src="images/image 23.png" class="mt-5 w-full rounded" alt="" />
+            <h2 class="font-bold text-xl text-black px-7 mt-6">
+              Info Daftar Ulang
+            </h2>
+            <p class="text-sm font-normal text-black text-opacity-50 px-7 mt-4">
+              Informasi tentang Pendaftaran Ulang Calon Peserta Didik yang
+              diterima seleksi PPDB SMA IT HSI IDN.
+            </p>
+            <p
+              class="text-sm font-normal text-black text-opacity-50 px-7 mt-8 pb-6"
+            >
+              <a href="" class="underline text-sky-500">Baca Selengkapnya</a>
+            </p>
+          </div>
+          <div
+            class="card bg-white rounded shadow-xl md:w-80 lg:w-96 lg:h-[550px]"
+          >
+            <img src="images/Mask Group.png" class="mt-5 w-full" alt="" />
+            <h2 class="font-bold text-xl text-black px-7 mt-6">
+              Pengumuman PPDB
+            </h2>
+            <p class="text-sm font-normal text-black text-opacity-50 px-7 mt-4">
+              Untuk mengetahui informasi PPDB I lebih lanjut bisa ke laman
+            </p>
+            <p
+              class="text-sm font-normal text-black text-opacity-50 px-7 mt-8 pb-6"
+            >
+              <a href="" class="underline text-sky-500">Baca Selengkapnya</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="prestasi bg-[#F9FBFD] py-8">
+      <div class="px-8">
+        <div class="tittle flex flex-col justify-center items-center">
+          <h2 class="text-2xl font-bold text-black">Prestasi</h2>
+          <p
+            class="text-base font-normal text-black text-opacity-70 text-center mt-3"
+          >
+            Pencapaian Sekolah, Guru, dan Siswa SMA IT HSI IDN
+          </p>
+        </div>
+        <div class="md:flex">
+          <div class="kartu bg-red-500">
+            <div class="card md:w-80 lg:w-96 lg:h-[550px] bglime">
+              <img src="images/Group 31.png" class="mt-5 mx-auto" alt="" />
+              <div class="tittle -mt-3 ml-3">
+                <h2 class="font-extrabold text-3xl text-black px-7 text-center">
+                  300+
+                </h2>
+                <p
+                  class="text-sm font-normal text-black text-opacity-50 px-7 text-center -ml-2"
+                >
+                  Siswa
+                </p>
+              </div>
+            </div>
+            <div class="card md:w-80 lg:w-96 lg:h-[550px]">
+              <img src="images/Group 33.png" class="mt-5 mx-auto" alt="" />
+              <div class="tittle -mt-3 ml-3">
+                <h2 class="font-extrabold text-3xl text-black px-7 text-center">
+                  50+
+                </h2>
+                <p
+                  class="text-sm font-normal text-black text-opacity-50 px-7 text-center -ml-2"
+                >
+                  Pengajar
+                </p>
+              </div>
+            </div>
+            <div class="card md:w-80 lg:w-96 lg:h-[550px]">
+              <img src="images/Group 34.png" class="mt-5 mx-auto" alt="" />
+              <div class="tittle -mt-3 ml-3">
+                <h2 class="font-extrabold text-3xl text-black px-7 text-center">
+                  200+
+                </h2>
+                <p
+                  class="text-sm font-normal text-black text-opacity-50 px-7 text-center -ml-2"
+                >
+                  Prestasi
+                </p>
+              </div>
+            </div>
+            <div class="card md:w-80 lg:w-96 lg:h-[550px]">
+              <img src="images/Group 36.png" class="mt-5 mx-auto" alt="" />
+              <div class="tittle -mt-3 ml-3">
+                <h2 class="font-extrabold text-3xl text-black px-7 text-center">
+                  3K+
+                </h2>
+                <p
+                  class="text-sm font-normal text-black text-opacity-50 px-7 text-center -ml-2"
+                >
+                  Lulusan
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="gambar">
+            <div class="image mt-10">
+              <img
+                src="images/DSC_0098.JPG"
+                class="rounded-lg shadow-2xl"
+                alt=""
+              />
+            </div>
           </div>
         </div>
       </div>
