--- a/index.html
+++ b/index.html
@@ -285,9 +285,11 @@
             Pencapaian Sekolah, Guru, dan Siswa SMA IT HSI IDN
           </p>
         </div>
-        <div class="md:flex">
-          <div class="kartu bg-red-500">
-            <div class="card md:w-80 lg:w-96 lg:h-[550px] bglime">
+        <div class="lg:flex lg:justify-between">
+          <div
+            class="kartu md:mt-10 grid grid-rows-2 grid-cols-2 md:flex lg:grid lg:grid-rows-2 lg:grid-cols-2 lg:w-[450px]"
+          >
+            <div class="card md:w-80 lg:w-96">
               <img src="images/Group 31.png" class="mt-5 mx-auto" alt="" />
               <div class="tittle -mt-3 ml-3">
                 <h2 class="font-extrabold text-3xl text-black px-7 text-center">
@@ -300,7 +302,7 @@
                 </p>
               </div>
             </div>
-            <div class="card md:w-80 lg:w-96 lg:h-[550px]">
+            <div class="card md:w-80 lg:w-96">
               <img src="images/Group 33.png" class="mt-5 mx-auto" alt="" />
               <div class="tittle -mt-3 ml-3">
                 <h2 class="font-extrabold text-3xl text-black px-7 text-center">
@@ -313,7 +315,7 @@
                 </p>
               </div>
             </div>
-            <div class="card md:w-80 lg:w-96 lg:h-[550px]">
+            <div class="card md:w-80 lg:w-96">
               <img src="images/Group 34.png" class="mt-5 mx-auto" alt="" />
               <div class="tittle -mt-3 ml-3">
                 <h2 class="font-extrabold text-3xl text-black px-7 text-center">
@@ -326,7 +328,7 @@
                 </p>
               </div>
             </div>
-            <div class="card md:w-80 lg:w-96 lg:h-[550px]">
+            <div class="card md:w-80 lg:w-96">
               <img src="images/Group 36.png" class="mt-5 mx-auto" alt="" />
               <div class="tittle -mt-3 ml-3">
                 <h2 class="font-extrabold text-3xl text-black px-7 text-center">
@@ -340,11 +342,11 @@
               </div>
             </div>
           </div>
-          <div class="gambar">
+          <div class="gambar md:px-24">
             <div class="image mt-10">
               <img
                 src="images/DSC_0098.JPG"
-                class="rounded-lg shadow-2xl"
+                class="rounded-lg shadow-2xl lg:w-[600px]"`
                 alt=""
               />
             </div>
@@ -352,6 +354,8 @@
         </div>
       </div>
     </section>
+
+
 
     <script>
       const sidebar = document.querySelector("aside");
