--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SMA IT HSI IDN</title>
     <link href="images/logo-idn.png" rel="icon" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css"
+      rel="stylesheet"
+    />
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -29,20 +34,52 @@
           />
         </div>
         <ul class="hidden md:flex justify-center items-center gap-5">
-          <a href=""><li class="text-base font-normal text-white">Home</li></a>
-          <a href=""><li class="text-base font-normal text-white">About</li></a>
           <a href=""
-            ><li class="text-base font-normal text-white">Fasilitas</li></a
+            ><li
+              class="text-base font-normal text-white"
+            >
+              Beranda
+            </li></a
+          >
+          <a href="about.html"
+            ><li
+              class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
+            >
+              Tentang Kami
+            </li></a
           >
           <a href=""
-            ><li class="text-base font-normal text-white">Ekskul</li></a
+            ><li
+              class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
+            >
+              Fasilitas
+            </li></a
           >
           <a href=""
-            ><li class="text-base font-normal text-white">Galeri</li></a
+            ><li
+              class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
+            >
+              Ekskul
+            </li></a
           >
-          <a href=""><li class="text-base font-normal text-white">Info</li></a>
           <a href=""
-            ><li class="text-base font-normal text-white">Kontak</li></a
+            ><li
+              class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
+            >
+              Galeri
+            </li></a
+          >
+          <a href=""
+            ><li
+              class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
+            >
+              Info
+            </li></a
+          >
+          <a href=""
+            ><li class="text-base font-normal text-slate-300 hover:text-white">
+              Kontak
+            </li></a
           >
         </ul>
         <button
@@ -63,7 +100,7 @@
     </nav>
 
     <aside
-      class="w-full h-screen bg-white bg-opacity-90 fixed translate-x-full md:hidden transition-all duration-200 ease-in-out z-[99]"
+      class="w-full h-screen bg-white bg-opacity-90 fixed translate-x-full md:hidden transition-all duration-700 ease-in-out z-[99]"
     >
       <div
         class="content backdrop-blur h-full flex items-center justify-center"
@@ -126,7 +163,7 @@
             Jagoan IT, Pinter Ngaji
           </h1>
           <button
-            class="bg-sky-500 text-sm md:text-base font-bold text-white rounded-lg px-4 py-3 mt-7"
+            class="bg-sky-500 text-sm md:text-base font-bold text-white rounded-lg px-4 py-3 mt-7 hover:bg-sky-600 transition-all ease-in-out"
           >
             Hubungi Kami
           </button>
@@ -160,7 +197,7 @@
             sifat kasih dan sayangnya banyak memberikan nikmat ...
           </p>
           <button
-            class="bg-sky-500 text-sm md:text-base font-bold text-white rounded-lg px-8 py-2 mt-5 md:mt-10"
+            class="bg-sky-500 hover:bg-sky-600 transition-all ease-in-out text-sm md:text-base font-bold text-white rounded-lg px-8 py-2 mt-5 md:mt-10"
           >
             Tonton Disini
           </button>
@@ -184,7 +221,7 @@
             terdapat disekolah kami kami akan ...
           </p>
           <button
-            class="bg-sky-500 text-sm md:text-base font-bold text-white rounded-lg px-8 py-2 mt-5 md:mt-10 md:w-[184px]"
+            class="bg-sky-500 hover:bg-sky-600 transition-all ease-in-out text-sm md:text-base font-bold text-white rounded-lg px-8 py-2 mt-5 md:mt-10 md:w-[184px]"
           >
             Lebih Lanjut
           </button>
@@ -275,7 +312,7 @@
       </div>
     </section>
 
-    <section class="prestasi bg-[#F9FBFD] py-8">
+    <section class="prestasi bg-[#F9FBFD] pt-8 pb-32">
       <div class="px-8">
         <div class="tittle flex flex-col justify-center items-center">
           <h2 class="text-2xl font-bold text-black">Prestasi</h2>
@@ -346,7 +383,8 @@
             <div class="image mt-10">
               <img
                 src="images/DSC_0098.JPG"
-                class="rounded-lg shadow-2xl lg:w-[600px]"`
+                class="rounded-lg shadow-2xl lg:w-[600px]"
+                `
                 alt=""
               />
             </div>
@@ -355,7 +393,140 @@
       </div>
     </section>
 
+    <footer class="bg-[#F9F9F9]">
+      <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
+        <div class="md:flex md:justify-between">
+          <div class="mb-6 md:mb-0">
+            <div class="flex items-center">
+              <img
+                src="images/logo-idn.png"
+                class="h-8 me-3"
+                alt="FlowBite Logo"
+              />
+              <span
+                class="self-center text-2xl font-semibold whitespace-nowrap text-black"
+                >SMA IT HSI IDN</span
+              >
+            </div>
+          </div>
 
+          <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
+            <div>
+              <h2 class="mb-6 text-base font-bold text-black uppercase">
+                Jelajah
+              </h2>
+              <ul class="text-black font-medium">
+                <li class="mb-4">
+                  <p>Sambutan</p>
+                </li>
+                <li class="mb-4">
+                  <p>Profil Sekolah</p>
+                </li>
+                <li class="mb-4">
+                  <p>Berita</p>
+                </li>
+                <li class="mb-4">
+                  <p>Galeri</p>
+                </li>
+              </ul>
+            </div>
+
+            <div>
+              <h2 class="mb-6 text-base font-bold text-gray-900 uppercase">
+                Halaman Umum
+              </h2>
+              <ul class="text-black font-medium">
+                <li class="mb-4">
+                  <p>Data Guru</p>
+                </li>
+                <li class="mb-4">
+                  <p>PPDB SMA IT HSI IDN</p>
+                </li>
+                <li class="mb-4">
+                  <p>Lokasi</p>
+                </li>
+                <li class="mb-4">
+                  <p>Kontak</p>
+                </li>
+              </ul>
+            </div>
+
+            <div>
+              <h2 class="mb-6 text-base font-bold text-black uppercase">
+                Legal
+              </h2>
+              <ul class="text-black font-medium">
+                <li class="mb-4">
+                  <a href="#" class="hover:underline">Privacy Policy</a>
+                </li>
+                <li>
+                  <a href="#" class="hover:underline">Terms &amp; Conditions</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <hr class="my-6 border-black sm:mx-auto dark:border-gray-700 lg:my-8" />
+        <div class="sm:flex sm:items-center sm:justify-between">
+          <span class="text-sm text-black sm:text-center"
+            >© 2024
+            <a href="https://flowbite.com/" class="hover:underline"
+              >SMA IT HSI IDN</a
+            >
+          </span>
+          <div class="flex mt-4 sm:justify-center sm:mt-0">
+            <a href="#" class="text-black hover:text-gray-900 ms-5">
+              <svg
+                class="w-4 h-4"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="currentColor"
+                viewBox="0 0 20 17"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M20 1.892a8.178 8.178 0 0 1-2.355.635 4.074 4.074 0 0 0 1.8-2.235 8.344 8.344 0 0 1-2.605.98A4.13 4.13 0 0 0 13.85 0a4.068 4.068 0 0 0-4.1 4.038 4 4 0 0 0 .105.919A11.705 11.705 0 0 1 1.4.734a4.006 4.006 0 0 0 1.268 5.392 4.165 4.165 0 0 1-1.859-.5v.05A4.057 4.057 0 0 0 4.1 9.635a4.19 4.19 0 0 1-1.856.07 4.108 4.108 0 0 0 3.831 2.807A8.36 8.36 0 0 1 0 14.184 11.732 11.732 0 0 0 6.291 16 11.502 11.502 0 0 0 17.964 4.5c0-.177 0-.35-.012-.523A8.143 8.143 0 0 0 20 1.892Z"
+                  clip-rule="evenodd"
+                />
+              </svg>
+              <span class="sr-only">Twitter page</span>
+            </a>
+            <a href="#" class="text-black hover:text-gray-900 ms-5">
+              <svg
+                class="w-4 h-4"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="currentColor"
+                viewBox="0 0 20 20"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M10 .333A9.911 9.911 0 0 0 6.866 19.65c.5.092.678-.215.678-.477 0-.237-.01-1.017-.014-1.845-2.757.6-3.338-1.169-3.338-1.169a2.627 2.627 0 0 0-1.1-1.451c-.9-.615.07-.6.07-.6a2.084 2.084 0 0 1 1.518 1.021 2.11 2.11 0 0 0 2.884.823c.044-.503.268-.973.63-1.325-2.2-.25-4.516-1.1-4.516-4.9A3.832 3.832 0 0 1 4.7 7.068a3.56 3.56 0 0 1 .095-2.623s.832-.266 2.726 1.016a9.409 9.409 0 0 1 4.962 0c1.89-1.282 2.717-1.016 2.717-1.016.366.83.402 1.768.1 2.623a3.827 3.827 0 0 1 1.02 2.659c0 3.807-2.319 4.644-4.525 4.889a2.366 2.366 0 0 1 .673 1.834c0 1.326-.012 2.394-.012 2.72 0 .263.18.572.681.475A9.911 9.911 0 0 0 10 .333Z"
+                  clip-rule="evenodd"
+                />
+              </svg>
+              <span class="sr-only">GitHub account</span>
+            </a>
+            <a href="#" class="text-black hover:text-gray-900 ms-5">
+              <svg
+                class="w-4 h-4"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="currentColor"
+                viewBox="0 0 20 20"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M10 0a10 10 0 1 0 10 10A10.009 10.009 0 0 0 10 0Zm6.613 4.614a8.523 8.523 0 0 1 1.93 5.32 20.094 20.094 0 0 0-5.949-.274c-.059-.149-.122-.292-.184-.441a23.879 23.879 0 0 0-.566-1.239 11.41 11.41 0 0 0 4.769-3.366ZM8 1.707a8.821 8.821 0 0 1 2-.238 8.5 8.5 0 0 1 5.664 2.152 9.608 9.608 0 0 1-4.476 3.087A45.758 45.758 0 0 0 8 1.707ZM1.642 8.262a8.57 8.57 0 0 1 4.73-5.981A53.998 53.998 0 0 1 9.54 7.222a32.078 32.078 0 0 1-7.9 1.04h.002Zm2.01 7.46a8.51 8.51 0 0 1-2.2-5.707v-.262a31.64 31.64 0 0 0 8.777-1.219c.243.477.477.964.692 1.449-.114.032-.227.067-.336.1a13.569 13.569 0 0 0-6.942 5.636l.009.003ZM10 18.556a8.508 8.508 0 0 1-5.243-1.8 11.717 11.717 0 0 1 6.7-5.332.509.509 0 0 1 .055-.02 35.65 35.65 0 0 1 1.819 6.476 8.476 8.476 0 0 1-3.331.676Zm4.772-1.462A37.232 37.232 0 0 0 13.113 11a12.513 12.513 0 0 1 5.321.364 8.56 8.56 0 0 1-3.66 5.73h-.002Z"
+                  clip-rule="evenodd"
+                />
+              </svg>
+              <span class="sr-only">Dribbble account</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script>
       const sidebar = document.querySelector("aside");
@@ -370,5 +541,6 @@
         sidebar.classList.add("translate-x-full");
       }
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
   </body>
 </html>
