--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <nav class="w-full bg-[#101524] z-50">
-      <div class="container px-8 py-4 mx-auto flex justify-between">
+      <div class="container px-8 py-1 mx-auto flex justify-between">
         <div class="logo">
           <img
             src="images/logo-idn.png"
@@ -156,8 +156,10 @@
 
     <section class="w-full bg-[url('images/bg.png')]">
       <div class="title">
-        <h2 class="font-bold text-2xl text-white text-center pt-10">
-          Profil Sekolah Kami
+        <h2
+          class="font-bold text-xl md:text-2xl text-white text-center md:pt-16 pt-8"
+        >
+          Profil SMA IT HSI IDN
         </h2>
       </div>
       <div
@@ -171,7 +173,7 @@
           <div class="hidden duration-700 ease-in-out" data-carousel-item>
             <img
               src="images/DSC_0048.JPG"
-              class="absolute w-full h-[700px] -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
+              class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
               alt="..."
             />
           </div>
@@ -214,35 +216,35 @@
         >
           <button
             type="button"
-            class="w-3 h-3 rounded-full"
+            class="md:w-3 md:h-3 w-2 h-2 rounded-full"
             aria-current="true"
             aria-label="Slide 1"
             data-carousel-slide-to="0"
           ></button>
           <button
             type="button"
-            class="w-3 h-3 rounded-full"
+            class="md:w-3 md:h-3 w-2 h-2 rounded-full"
             aria-current="false"
             aria-label="Slide 2"
             data-carousel-slide-to="1"
           ></button>
           <button
             type="button"
-            class="w-3 h-3 rounded-full"
+            class="md:w-3 md:h-3 w-2 h-2 rounded-full"
             aria-current="false"
             aria-label="Slide 3"
             data-carousel-slide-to="2"
           ></button>
           <button
             type="button"
-            class="w-3 h-3 rounded-full"
+            class="md:w-3 md:h-3 w-2 h-2 rounded-full"
             aria-current="false"
             aria-label="Slide 4"
             data-carousel-slide-to="3"
           ></button>
           <button
             type="button"
-            class="w-3 h-3 rounded-full"
+            class="md:w-3 md:h-3 w-2 h-2 rounded-full"
             aria-current="false"
             aria-label="Slide 5"
             data-carousel-slide-to="4"
@@ -255,7 +257,7 @@
           data-carousel-prev
         >
           <span
-            class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
+            class="inline-flex items-center justify-center w-7 h-7 md:w-10 md:h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
           >
             <svg
               class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180"
@@ -281,7 +283,7 @@
           data-carousel-next
         >
           <span
-            class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
+            class="inline-flex items-center justify-center w-7 h-7 md:w-10 md:h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
           >
             <svg
               class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180"
@@ -301,6 +303,146 @@
             <span class="sr-only">Next</span>
           </span>
         </button>
+      </div>
+    </section>
+
+    <section class="profil">
+      <div class="container px-16 mx-auto">
+        <div class="title">
+          <h2
+            class="font-bold text-xl md:text-2xl text-black text-center md:pt-16 pt-8"
+          >
+            SMA IT HSI IDN
+          </h2>
+        </div>
+        <div class="card-biru rounded bg-[#2BA7E2] mt-10 mb-10">
+          <div class="card-1">
+            <div class="image flex justify-center items-center pt-5">
+              <img src="images/Group 195.png" alt="" />
+            </div>
+            <div class="title flex flex-col justify-center items-center">
+              <h2 class="text-base font-semibold text-white">Nama Sekolah</h2>
+              <p class="text-sm font-thin text-[#DFDFDF] mb-3">
+                SMA IT HSI IDN
+              </p>
+              <h2 class="text-base font-semibold text-white">
+                Nama Kepala Sekolah
+              </h2>
+              <p class="text-sm font-thin text-[#DFDFDF] mb-10">Fauzi M Noor</p>
+            </div>
+          </div>
+          <div class="card-2">
+            <div class="image flex justify-center items-center pt-5">
+              <img src="images/Group 33.png" alt="" />
+            </div>
+            <div class="title flex flex-col justify-center items-center">
+              <h2 class="text-base font-semibold text-white">Alamat</h2>
+              <p
+                class="text-sm font-thin text-[#DFDFDF] text-center px-8 mb-10"
+              >
+                Jl. Gatot Subroto, No. 371, Desa Krajan, Baledono, Purworejo -
+                Jawa Tengah
+              </p>
+            </div>
+          </div>
+          <div class="card-3">
+            <div class="image flex justify-center items-center pt-5">
+              <img src="images/Group 299.png" alt="" />
+            </div>
+            <div class="title flex flex-col justify-center items-center">
+              <h2 class="text-base font-semibold text-white">Website/Email</h2>
+              <p class="text-sm font-thin text-[#DFDFDF] mb-3 text-center">
+                smaithsiidn.co.id / <br />
+                smaithsiidn@gmail.com
+              </p>
+              <h2 class="text-base font-semibold text-white">No. Telp</h2>
+              <p class="text-sm font-thin text-[#DFDFDF] mb-10">
+                +62 896-2303-9600
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex flex-col">
+          <div class="card rounded border border-[#919FAE] bg-[#DFDFDF] mb-3">
+            <div class="image flex justify-center items-center">
+              <img src="images/Group 195.png" alt="" />
+            </div>
+            <div class="title flex flex-col justify-center items-center">
+              <h2 class="text-base font-bold text-black">
+                No. Pendirian Sekolah
+              </h2>
+              <p class="text-sm font-thin text-black mb-3 text-center">-</p>
+              <h2 class="text-base font-bold text-black">No. Serifikat</h2>
+              <p class="text-sm font-thin text-black mb-10">421 / 997 / 2022</p>
+            </div>
+          </div>
+          <div class="card rounded border border-[#919FAE] bg-[#DFDFDF] mb-3">
+            <div class="image flex justify-center items-center">
+              <img src="images/Group 195.png" alt="" />
+            </div>
+            <div class="title flex flex-col justify-center items-center">
+              <h2 class="text-base font-bold text-black">
+                No. Pendirian Sekolah
+              </h2>
+              <p class="text-sm font-thin text-black mb-3 text-center">-</p>
+              <h2 class="text-base font-bold text-black">No. Serifikat</h2>
+              <p class="text-sm font-thin text-black mb-10">421 / 997 / 2022</p>
+            </div>
+          </div>
+          <div class="card rounded border border-[#919FAE] bg-[#DFDFDF] mb-3">
+            <div class="image flex justify-center items-center">
+              <img src="images/Group 195.png" alt="" />
+            </div>
+            <div class="title flex flex-col justify-center items-center">
+              <h2 class="text-base font-bold text-black">
+                No. Pendirian Sekolah
+              </h2>
+              <p class="text-sm font-thin text-black mb-3 text-center">-</p>
+              <h2 class="text-base font-bold text-black">No. Serifikat</h2>
+              <p class="text-sm font-thin text-black mb-10">421 / 997 / 2022</p>
+            </div>
+          </div>
+          <div class="card rounded border border-[#919FAE] bg-[#DFDFDF] mb-3">
+            <div class="image flex justify-center items-center">
+              <img src="images/Group 195.png" alt="" />
+            </div>
+            <div class="title flex flex-col justify-center items-center">
+              <h2 class="text-base font-bold text-black">
+                No. Pendirian Sekolah
+              </h2>
+              <p class="text-sm font-thin text-black mb-3 text-center">-</p>
+              <h2 class="text-base font-bold text-black">No. Serifikat</h2>
+              <p class="text-sm font-thin text-black mb-10">421 / 997 / 2022</p>
+            </div>
+          </div>
+          <div class="card rounded border border-[#919FAE] bg-[#DFDFDF] mb-3">
+            <div class="image flex justify-center items-center">
+              <img src="images/Group 195.png" alt="" />
+            </div>
+            <div class="title flex flex-col justify-center items-center">
+              <h2 class="text-base font-bold text-black">
+                No. Pendirian Sekolah
+              </h2>
+              <p class="text-sm font-thin text-black mb-3 text-center">-</p>
+              <h2 class="text-base font-bold text-black">No. Serifikat</h2>
+              <p class="text-sm font-thin text-black mb-10">421 / 997 / 2022</p>
+            </div>
+          </div>
+          <div class="card rounded border border-[#919FAE] bg-[#DFDFDF] mb-3">
+            <div class="image flex justify-center items-center">
+              <img src="images/Group 195.png" alt="" />
+            </div>
+            <div class="title flex flex-col justify-center items-center">
+              <h2 class="text-base font-bold text-black">
+                No. Pendirian Sekolah
+              </h2>
+              <p class="text-sm font-thin text-black mb-3 text-center">-</p>
+              <h2 class="text-base font-bold text-black">No. Serifikat</h2>
+              <p class="text-sm font-thin text-black mb-10">421 / 997 / 2022</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
